--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -15,7 +15,7 @@
           <span class="mb-5"><h2><%= @event.venue.name %></h3></span>
           <h3><i class="fas fa-home"></i>&nbsp <%= @event.venue.address %></h3>
           <h3><i class="far fa-clock"></i>&nbsp <%= @event.beginning_hour %></h3>
-          <h3><i class="fas fa-globe"></i>&nbsp <%= link_to "site web", @event.url %></h3>
+          <h3><i class="fas fa-globe"></i>&nbsp <%= link_to "Site web", @event.url %></h3>
           <% if @event.venue.phone_number.present? %>
           <h3><i class="fas fa-phone"></i>&nbsp <%= @event.venue.phone_number %></h3>
           <% end %>
@@ -48,7 +48,7 @@
         <div class="result-details">
           <h3><i class="fas fa-home"></i>&nbsp <%= @event.venue.address %></h3>
           <h3><i class="far fa-clock"></i>&nbsp <%= @event.beginning_hour %> - <%= @event.end_hour %></h3>
-          <h3><i class="fas fa-globe"></i>&nbsp <%= link_to "site web", @event.url %></h3>
+          <h3><i class="fas fa-globe"></i>&nbsp <%= link_to "Site web", @event.url %></h3>
           <% if @event.venue.phone_number.present? %>
           <h3><i class="fas fa-phone"></i>&nbsp <%= @event.venue.phone_number %></h3>
           <% end %>
@@ -76,12 +76,16 @@
 
       <div class="result-presentation">
         <div class="result-photo">
+          <% if @event.category == "concert" %>
+            <%= image_tag @event.photo_url %>
+          <% else %>
           <%= cl_image_tag @event.venue.photo, height: 200, width: 300, crop: :fill %>
+          <% end %>
         </div>
         <div class="result-details">
           <h3><i class="fas fa-home"></i>&nbsp <%= @event.venue.address %></h3>
           <h3><i class="far fa-clock"></i>&nbsp <%= @event.beginning_hour %> - <%= @event.end_hour %></h3>
-          <h3><i class="fas fa-globe"></i>&nbsp <%= link_to "site web", @event.url %></h3>
+          <h3><i class="fas fa-globe"></i>&nbsp <%= link_to "Site web", @event.url %></h3>
           <% if @event.venue.phone_number.present? %>
           <h3><i class="fas fa-phone"></i>&nbsp <%= @event.venue.phone_number %></h3>
           <% end %>
