--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -9,8 +9,13 @@
 
       <div class="result-presentation">
         <div class="result-photo">
-          <%= image_tag @event.photo_url %>
+          <% if @event.photo_url == "/design/images/mascotteNb.png" %>
+            <%= image_tag @event.venue.photo %>
+          <% else %>
+            <%= image_tag @event.photo_url %>
+          <% end %>
         </div>
+
         <div class="result-details">
           <span class="mb-5"><h2><%= @event.venue.name %></h3></span>
           <h3><i class="fas fa-home"></i>&nbsp <%= @event.venue.address %></h3>
