--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -45,8 +45,10 @@
     <div class="text-result">
       <h1><%= @events.first.name %></h1>
       <h2><%= @events.first.category.capitalize %> <% unless @events.third.category == "concert" %><%= @events.first.venue.name %></h2><% end %>
-      <% if @events.first.category == "Cinéma" %>
-      <h3>Film - <%= @events.first.genre.capitalize %></h3>
+      <% if @events.first.genre == "Film" %>
+        <h3>Film d'Animation</h3>
+      <% elsif @events.first.category == "Cinéma" %>
+        <h3>Film - <%= @events.first.genre.capitalize %></h3>
       <% end %>
     </div>
     <div class="button-result">
@@ -69,8 +71,10 @@
     <div class="text-result">
       <h1><%= @events.second.name %></h1>
       <h2><%= @events.second.category.capitalize %> <% unless @events.third.category == "concert" %><%= @events.second.venue.name %></h2><% end %>
-      <% if @events.second.category == "Cinéma" %>
-      <h3>Film - <%= @events.second.genre.capitalize %></h3>
+      <% if @events.second.genre == "Film" %>
+       <h3>Film d'Animation</h3>
+      <% elsif @events.second.category == "Cinéma" %>
+        <h3>Film - <%= @events.second.genre.capitalize %></h3>
       <% end %>
     </div>
     <div class="button-result">
@@ -93,8 +97,10 @@
     <div class="text-result">
       <h1><%= @events.third.name %></h1>
       <h2><%= @events.third.category.capitalize %> <% unless @events.third.category == "concert" %><%= @events.third.venue.name %></h2><% end %>
-      <% if @events.third.category == "Cinéma" %>
-      <h3>Film - <%= @events.third.genre.capitalize %></h3>
+      <% if @events.third.genre == "Film" %>
+        <h3>Film d'Animation</h3>
+      <% elsif @events.third.category == "Cinéma" %>
+        <h3>Film - <%= @events.third.genre.capitalize %></h3>
       <% end %>
     </div>
     <div class="button-result">
