--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -77,6 +77,7 @@
 
   a {
     color: #c4c4c4;
+    padding-right: 10px;
     text-decoration: none;
     &:hover {
       text-decoration: underline;
