--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -27,6 +27,10 @@
           <% if @event.venue.phone_number.present? %>
           <h3><i class="fas fa-phone"></i>&nbsp <%= @event.venue.phone_number %></h3>
           <% end %>
+          <h3>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=<%= request.base_url + event_path(@event) %>"><i class="fab fa-facebook"></i></a>
+            <a href="https://twitter.com/home?status=<%= request.base_url + event_path(@event) %>"><i class="fab fa-twitter-square"></i></a>
+          </h3>
         </div>
       </div>
 
@@ -60,6 +64,10 @@
           <% if @event.venue.phone_number.present? %>
           <h3><i class="fas fa-phone"></i>&nbsp <%= @event.venue.phone_number %></h3>
           <% end %>
+          <h3>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=<%= request.base_url + event_path(@event) %>"><i class="fab fa-facebook"></i></a>
+            <a href="https://twitter.com/home?status=<%= request.base_url + event_path(@event) %>"><i class="fab fa-twitter-square"></i></a>
+          </h3>
         </div>
       </div>
 
@@ -97,6 +105,10 @@
           <% if @event.venue.phone_number.present? %>
           <h3><i class="fas fa-phone"></i>&nbsp <%= @event.venue.phone_number %></h3>
           <% end %>
+          <h3>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=<%= request.base_url + event_path(@event) %>"><i class="fab fa-facebook"></i></a>
+            <a href="https://twitter.com/home?status=<%= request.base_url + event_path(@event) %>"><i class="fab fa-twitter-square"></i></a>
+          </h3>
         </div>
       </div>
 
