--- a/app/views/event_mailer/share.html.erb
+++ b/app/views/event_mailer/share.html.erb
@@ -6,7 +6,9 @@
   Voici le plan qu'on a choisi pour toi ce soir:
   <br>
   <br>
-  <strong><%= @event.name %></strong>
+  <%= link_to event_url(@event) do %>
+    <strong><%= @event.name %></strong>
+  <% end %>
   <br>
   <br>
   <%= @event.venue.address %>
