--- a/app/views/twilio/_phone_number.html.erb
+++ b/app/views/twilio/_phone_number.html.erb
@@ -3,8 +3,8 @@
   <div class="form-inputs">
     <%= f.input :phone_number, label: false, placeholder: 'Drop ton 06 !' %>
     <%= f.input :notification_way, as: :hidden, input_html: {value: "texto"} %>
-    <%= f.button :submit, 'Send', class: 'button-twilio-form send' %>
-    <%= link_to "Cancel", event_path(@event), class: 'button-twilio-form' %>
+    <%= f.button :submit, 'Envoyer', class: 'button-twilio-form send' %>
+    <%= link_to "Annuler", event_path(@event), class: 'button-twilio-form' %>
   </div>
 <% end %>
 </div>
