--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -194,6 +194,10 @@
   margin-top: 10px;
 }
 
+.email {
+  padding-top: 3px;
+}
+
 .form-inputs {
   display: flex;
   align-items: center;
@@ -212,6 +216,17 @@
   border: none;
 }
 
+.button-actionMailer-form {
+  color: $orange;
+  font-size: 15px;
+  background-color: rgba(0, 0, 0, 0);
+  border: none;
+}
+
 .send {
+  margin: 0 15px;
+}
+
+.send2 {
   margin: 0 15px;
 }
