--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -11,7 +11,7 @@
   </div>
 
   <%= link_to "#", class: "hide link-to-events" do %>
-    <h1 >Afficher les résultats</h1>
+    Afficher les résultats
   <% end %>
 
   <div class="tagline-index-loading">
