scrollbar for chrome ok

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -109,6 +109,7 @@
     margin-bottom: 0;
     font-size: 1.1em;
     font-weight: lighter;
+    margin-right: 10px;
   }
 }
 
@@ -128,6 +129,7 @@
     margin-bottom: 0;
     font-size: 1.1em;
     font-weight: lighter;
+    margin-right: 10px;
   }
 }
 
@@ -147,6 +149,7 @@
     color: white;
     margin-bottom: 0;
     font-weight: lighter;
+    margin-right: 10px;
   }
 }
 
