responsive OK sauf pour la show
Signed-off-by: Nassim Boukhalfa <nassim106@hotmail.com>

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -64,3 +64,19 @@
     background-size: cover;
     background-position: center;
   }
+
+
+@media (max-width: 768px) {
+  .logo-home img {
+    max-width: 80vw;
+  }
+
+  .start-button a {
+    font-size: 1.5em;
+  }
+
+  .text-tagline h2 {
+    font-size: 1.6em;
+  }
+
+}
