--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -37,7 +37,7 @@
           <span class="mb-5"><h2><%= @event.venue.name %></h3></span>
           <h3><i class="fas fa-home"></i>&nbsp <%= @event.venue.address %></h3>
           <h3><i class="far fa-clock"></i>&nbsp <%= @event.beginning_hour %></h3>
-          <h3><i class="fas fa-globe"></i>&nbsp <%= link_to "Site web", @event.url %></h3>
+          <h3><i class="fas fa-globe"></i>&nbsp <%= link_to "Site web", @event.url, target: "_blank" %></h3>
           <% if @event.venue.phone_number.present? %>
           <h3><i class="fas fa-phone"></i>&nbsp <%= @event.venue.phone_number %></h3>
           <% end %>
