--- a/app/assets/stylesheets/pages/events-index.scss
+++ b/app/assets/stylesheets/pages/events-index.scss
@@ -157,14 +157,15 @@
 .button-result {
   margin-top: 40px;
   a {
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Permanent Marker', cursive;
     text-decoration: none;
     color: $orange;
     font-size: 30px;
-    border: 3px solid $orange;
+    // border-bottom: 3px solid $orange;
     padding: 10px 15px;
     &:hover {
-      background-color: rgba(150, 150, 150, 0.2);
+      // background-color: rgba(150, 150, 150, 0.2);
+      color: $white;
     }
   }
 }
