--- a/app/assets/stylesheets/components/_answer-card.scss
+++ b/app/assets/stylesheets/components/_answer-card.scss
@@ -86,3 +86,29 @@
     border: 12px solid $orange;
   }
 }
+
+@media (max-width: 768px) {
+  .answer-card {
+    font-size: 0.75em;
+  }
+
+  .show-container-2, .show-container-3, .show-container-4 {
+    flex-direction: column;
+  }
+
+  .show-container-2 .link-card-2, .show-container-4 .link-card-4 {
+    height: calc(50vh - 30px) ;
+
+  }
+
+  .show-container-3 .link-card-3 {
+    height: calc(33.333333vh - 20px) ;
+
+  }
+
+  .show-container-6 .answer-card {
+    // height: calc(33.333333vh - 20px) ;
+    width: 100vw ;
+  }
+
+}
