--- a/app/assets/stylesheets/pages/events-index.scss
+++ b/app/assets/stylesheets/pages/events-index.scss
@@ -247,4 +247,22 @@
   .text-result .h1 {
     font-size: 45px;
   }
+
+
+  .tagline-index-loading {
+    text-align: center;
+
+    img {
+      width: 40px;
+    }
+
+    h1 {
+      font-size: 0.75em;
+    }
+  }
+
+  .photo-result img {
+    height: auto;
+    width: 83vw;
+  }
 }
